# simple-password-vault

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  todo.md
public/static/: login.css  login.scss  vault.css  vault.css.map  vault.scss
public/static/css/: _action-bar.scss  _container.scss  _footer.scss  _layout.scss  _nav.scss  _ui.scss  _vars.scss  add-table.scss  dialogue.css  dialogue.scss  edit.css  font.css  login.css.map  login.scss  style.css  style.scss  table.css  table.scss  vault.css  vault.css.map  vault.scss
public/templates/: action-bar.html.hbs  add-password.html.hbs  add-table.html.hbs  admin.html.hbs  edit.html.hbs  error-box.html.hbs  footer.html.hbs  head.html.hbs  login.html.hbs  navigation.html.hbs  new-admin-password.html.hbs  no-tables.html.hbs  table-not-found.html.hbs  table.html.hbs  vault.html.hbs
src/: crypt.rs  database.rs  main.rs  routes.rs  sessions.rs
src/database/: data.rs
src/routes/: admin.rs  authentication.rs  export.rs  table_cud.rs  tables.rs  vault.rs  xport.rs
