[package]
name = "simple-password-vault"
version = "0.1.0"
authors = ["Lennart Kloock <lennart.kloock@protonmail.com>"]
edition = "2021"

[dependencies]
serde = "1.0"
rand = "0.8"
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
time = "0.2" #Only for cookie max age
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
csv = "1.1"
#Encryption
rsa = "0.5"
hex = "0.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt"]
